--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,13 +21,12 @@
     <Spinner
         android:id="@+id/spinner"
         android:layout_height="wrap_content"
+        android:layout_width="300dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/conbvert"
         app:layout_constraintBottom_toBottomOf="@id/temp"
-        android:paddingHorizontal="16dp"
-
-        />
+        android:paddingHorizontal="16dp" />
 
     <Button
         android:id="@+id/convertir"
@@ -62,7 +61,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/spinner"
-        app:layout_constraintBottom_toTopOf="res"
         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
